[package]
name = "advent-of-code2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13"
rayon = "1"
regex = "1"
lazy_static = "1"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"